fixed bug #15040: Paragraph styles menu is too large to fit on a regular 13-inch screen
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@56874 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/less/Services/COPage/delos.less
+++ b/templates/default/less/Services/COPage/delos.less
@@ -430,3 +430,18 @@ a.nostyle:hover {
 	background-color: darken(@brand-secondary, 20%);
 	color: white;
 }
+
+.ilCOPgEditStyleSelectionItem {
+	padding: 10px;
+	background-color: @il-primary-container-bg;
+	cursor: pointer;
+}
+
+.ilCOPgEditStyleSelectionItem:hover {
+	background-color: @il-highlight-bg;
+}
+
+ul#ilAdvSelListTable_style_selection {
+	overflow: auto;
+	max-height: 400px;
+}
